--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^2.2.1",
     "@nestjs/sequelize": "^9.0.2",
     "@nestjs/swagger": "^6.3.0",
     "@types/sequelize": "^4.28.14",
@@ -31,6 +32,7 @@
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
+    "rss-parser": "^3.13.0",
     "rxjs": "^7.2.0",
     "sequelize": "^6.31.0",
     "sequelize-typescript": "^2.1.5",
